# TradingAgents

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml
server/: .env.example  Dockerfile  conftest.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 05c011230151_initial_schema.py  a1b2c3d4e5f6_add_memory_entries.py  b1c2d3e4f5a6_memory_entry_resolved_check.py  c2d3e4f5a6b7_users_add_email_unique_and_google_sub.py  d3e4f5a6b7c8_add_watchlist_items.py  (+2 more)
server/app/: auth.py  config.py  db.py  export_openapi.py  main.py
server/app/models/: run.py  (+4 more)
server/tests/: conftest.py  conftest_pg.py  test_auth.py  test_auth_dual_provider.py  test_config.py  test_db.py  test_health.py  test_import_runs.py  test_log_tailer.py  test_me.py  test_me_monitor_endpoint.py  test_memory_entry_updated_at.py  test_memory_mirror.py  test_memory_mirror_concurrent_pg.py  test_migration_resolved_check.py  test_migrations.py  test_models.py  test_monitor.py  test_notification_channels.py  test_notification_service.py  test_notification_sweep.py  test_notifications_prefs.py  test_orphan_sweeper.py  test_portfolio_calc.py  test_portfolio_router.py  test_portfolio_ticker_interval.py  test_price_cache.py  test_price_cache_interval.py  test_redis_pool.py  test_root_package_import.py  test_run_dispatcher.py  test_runs_active_count.py  test_runs_create.py  test_runs_detail.py  test_runs_list.py  test_runs_tail.py  test_schemas_portfolio.py  test_signals_today.py  test_tasks.py  test_user_identity.py  (+3 more)
(+149 files in other folders)
